# dialog-landingpage

./: .env.example  .gitignore  CONTEXT.md  README.md  bisheng_rag_api.py  design.md  dialog-design.json  pyproject.toml  requirements.txt
.claude/: settings.local.json
docs/: PRD.md
docs/adr/: 0001-deterministic-skeleton-with-react-core.md  0002-coverage-table-driven-progressive-retrieval.md  0003-structured-session-memory-and-query-rewrite.md  0004-parameterized-query-capabilities-over-text2sql.md  0005-unified-permission-injection-layer.md  0006-quality-inspection-out-of-scope.md  0007-unified-evidence-contract.md
src/dialog_agent/: __init__.py  chat_flow.py  config.py  coverage.py  database_tool.py  evidence.py  graph.py  knowledge_tool.py  models.py  nodes.py  observability.py  persistence.py  safety.py  session_memory.py  state.py  web_search_tool.py
tests/: conftest.py  test_chitchat_skeleton.py  test_database_flow.py  test_database_tool.py  test_evidence_and_coverage.py  test_external_flow.py  test_knowledge_flow.py  test_loop_termination.py  test_progressive_retrieval.py  test_redis_checkpointer.py  test_redis_persistence_isolation.py  test_session_memory_rewrite.py  test_web_search_tool.py
